# ape

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: ApeConfig-include.cmake
